JDK 25 (no more --enable-preview); fix mockito&byte-buddy-agent